elements/pfe-cta/demo/demo.css
  body {
    margin: 0;
  }

  h1,
  h2,
  h3,
  p {
    font-family: var(--pfe-theme--font-family, "Overpass", Overpass, Helvetica, helvetica, arial, sans-serif);
  }

  h1,
  h2 {
    margin: 15px 0 10px;
  }

  pfe-band {
    --pfe-band--Padding--horizontal: 60px;
    --pfe-band--Width: 100%;
  }

  pfe-card {
    display: grid;
    grid-gap: 15px;
    --pfe-card--Padding: 10px;
  }

  pfe-cta {
    margin-top: 10px;
    margin-left: 20px;
  }

  .force-wrap {
      max-width: 231px;
  }

  .card-layout {
    display: grid;
    grid-gap: 10px;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  }

  a {
    color: #2290ff;
  }

  .custom-dark-band {
    padding: 60px 15px;
    background: #222;
    --theme: dark;
  }

  .custom-saturated-band {
    padding: 60px 15px;
    background: #0c8488;
    --theme: saturated;
  }

  .custom-on-dark-band {
    padding: 30px 15px;
    background: #0d053e;
    --theme: dark;
  }

